fixes letter spacing for button text

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@
     font-size: 18px;
     font-weight: 500;
     line-height: 27px;
-    letter-spacing: 0.5em;
+    letter-spacing: 0.1em;
     text-align: center;
     border: 1px hidden;
   }
